// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerNotification renders correctly 1`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-flag-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - messge
  </span>
  <svg
    className="wds-icon wds-banner-notification__close wds-icon-tiny"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
    />
  </svg>
</div>
`;

exports[`BannerNotification renders correctly 2`] = `
<div
  className="wds-banner-notification wds-success "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-checkmark-circle-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - success
  </span>
  <svg
    className="wds-icon wds-banner-notification__close wds-icon-tiny"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
    />
  </svg>
</div>
`;

exports[`BannerNotification renders correctly 3`] = `
<div
  className="wds-banner-notification wds-warning "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-alert-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - warning
  </span>
  <svg
    className="wds-icon wds-banner-notification__close wds-icon-tiny"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
    />
  </svg>
</div>
`;

exports[`BannerNotification renders correctly 4`] = `
<div
  className="wds-banner-notification wds-alert "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-error-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - alert
  </span>
  <svg
    className="wds-icon wds-banner-notification__close wds-icon-tiny"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
    />
  </svg>
</div>
`;

exports[`BannerNotification renders correctly 5`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-flag-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    <em>
      Note
    </em>
    : this is html.
  </span>
  <svg
    className="wds-icon wds-banner-notification__close wds-icon-tiny"
    onClick={[Function]}
  >
    <use
      xlinkHref="#wds-icons-cross-tiny"
    />
  </svg>
</div>
`;

exports[`BannerNotification renders correctly without action 1`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-flag-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - messge
  </span>
</div>
`;

exports[`BannerNotification renders correctly without action 2`] = `
<div
  className="wds-banner-notification wds-success "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-checkmark-circle-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - success
  </span>
</div>
`;

exports[`BannerNotification renders correctly without action 3`] = `
<div
  className="wds-banner-notification wds-warning "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-alert-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - warning
  </span>
</div>
`;

exports[`BannerNotification renders correctly without action 4`] = `
<div
  className="wds-banner-notification wds-alert "
>
  <div
    className="wds-banner-notification__icon"
  >
    <svg
      className="wds-icon wds-icon-small"
    >
      <use
        xlinkHref="#wds-icons-error-small"
      />
    </svg>
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - alert
  </span>
</div>
`;
